# pkgman_triggers.py

./: .gitignore  MANIFEST.in  ReadMe.md  pkgman_py_hooks  setup.cfg
pkgman_triggers/: AuthDB.py  Backend.py  PackageInfo.py  __init__.py  __main__.py  defaults.py  events.py  gui.py  matchers.py  triggers.py
pkgman_triggers/backends/: dpkg.py
pkgman_triggers/util/: __init__.py
test/: pkgman_triggers_test.py  setup.cfg
triggers_sources/pkgman-deb-trigger/DEBIAN/: control  postinst  triggers
