[metadata]
name = pkgman_triggers
#version = 0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH/pkgman_triggers.py
description = A lib for convenient and pythonic use of package manager hooks.
long_description = file: ReadMe.md
keywords = python, building, CI, bleeding edge, 
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
packages = find:
include_package_data = True
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3

[options.packages.find]
include =
	pkgman_triggers
	pkgman_triggers.*
