[metadata]
name = pkgman_triggers_test
version = 0.1
description = Just a test trigger
long_description = file: ReadMe.md
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
include_package_data = True
setup_requires = setuptools>=44; wheel
pymodules = pkgman_triggers_test

[options.entry_points]
pkgman_triggers =
	pkgman_triggers1@{"packages": ["libcli11-dev"]} = pkgman_triggers_test:test_trigger
	pkgman_triggers2@{"paths": ["/usr/local/lib/"]} = pkgman_triggers_test:test_trigger
